plugins {
    id 'java'
    id 'application'
}

def starmadeDirectory = project.property("starmade_root")
def modName = project.property("mod_name")
def docsSourceDir = layout.projectDirectory.dir('docs/markdown')
def docsResourceDir = layout.projectDirectory.dir('src/main/resources/docs')
group = project.property('mod_org_id')
version = project.property('mod_version')
mainClassName = group + modName

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

repositories {
    mavenCentral {
        metadataSources {
            mavenPom()
            artifact()
            ignoreGradleMetadataRedirection()
        }
    }
    maven { url 'https://jitpack.io' }
}

dependencies {
    implementation "org.commonmark:commonmark:0.21.0"
    implementation 'org.lz4:lz4-java:1.8.1'
    compileOnly(files('lib/ModGlossar.jar'))
    compileOnly(files(starmadeDirectory + "StarMade.jar"))
    compileOnly(fileTree(dir: (starmadeDirectory + "lib"), include: "*.jar"))
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.register('syncDocumentationResources', Sync) {
    from(docsSourceDir)
    into(docsResourceDir)
    includeEmptyDirs = false
}

tasks.register('generateDocumentationIndex') {
    dependsOn('syncDocumentationResources')
    outputs.file(docsResourceDir.file('docs.index'))

    doLast {
        def targetDirectory = docsResourceDir.asFile
        targetDirectory.mkdirs()

        def files = fileTree(targetDirectory) {
            include '**/*.md'
        }.files.collect {
            targetDirectory.toPath().relativize(it.toPath()).toString().replace(File.separatorChar, '/' as char)
        }.sort()

        def indexFile = docsResourceDir.file('docs.index').asFile
        indexFile.text = files.isEmpty() ? '' : files.join(System.lineSeparator()) + System.lineSeparator()
    }
}

tasks.named('processResources') {
    dependsOn('generateDocumentationIndex')
}

tasks.register("updateVersion") {
    doLast {
        def modJson = file('src/main/resources/mod.json')
        def modJsonContent = modJson.getText()
        modJsonContent = modJsonContent.replaceAll(/"version":\s*".*"/, "\"version\": \"" + version + "\"")
        modJson.write(modJsonContent)
    }
}

jar {
    dependsOn("updateVersion")
    duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
    destinationDirectory.set(file(starmadeDirectory + "mods"))
    archiveFileName = modName + 'v' + getVersion() + '.jar'
    manifest.attributes('Main-Class': mainClassName)
    from {
        configurations.runtimeClasspath.collect {
            if (!it.getPath().contains("StarMade") && it.getName().endsWith(".jar")) {
                it.isDirectory() ? it : zipTree(it)
            } else {
                return null
            }
        }
    }
}